YAML/k8s-rancher/nginx-canary-old.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-canary-old
  labels:
    app: nginx
    version: old
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: old
  template:
    metadata:
      labels:
        app: nginx
        version: old
    spec:
      containers:
      - name: nginx
        image: nginx:1.19
        ports:
        - containerPort: 80
