YAML/k8s-rancher/pdb-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdb-nginx-deploy 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pdb-nginx-deploy 
 template:
    metadata:
      labels:
        app: pdb-nginx-deploy 
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
