YAML/k8s-rancher/canary-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
