YAML/k8s-rancher/ep-my-service.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: my-nginx-svc 
subsets:
  - addresses:
      - ip: 10.0.0.1
      - ip: 10.0.0.2
    ports:
      - port: 80
