YAML/k8s-rancher/multiport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-multi-port
  labels:
    run: my-nginx
spec:
  ports:
  - name: normal
    port: 80
    protocol: TCP
    targetPort: 8080
 - name: secure
    port: 82
    protocol: TCP
    targetPort: 8082
- name: monitoring
    port: 83
    protocol: TCP
    targetPort: 8083
  selector:
    run: my-nginx
