YAML/k8s-rancher/pod-wordpress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-mariadb-pod
  labels:
    app: wordpress-mariadb
spec:
  containers:
    - name: mariadb
      image: docker.io/library/mariadb:latest
      ports:
        - containerPort: 3306

    - name: wordpress
      image: docker.io/library/wordpress:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  type: LoadBalancer
  selector:
    app: wordpress-mariadb
  ports:
    - port: 80
      targetPort: 80


kubectl create -f wordpress.yaml
kubectl get -f wordpress.yaml
