YAML/k8s-rancher/np-b-allow-from-np-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-np-a
  namespace: np-b
spec:
  podSelector:
    matchLabels: {}  # 모든 파드 대상
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: np-a
